Windows Bugs are fixed.